# teidelum

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Makefile  SPEC.md
.claude/: settings.local.json
.github/workflows/: deploy-website.yml
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs
crates/connector-core/: Cargo.toml
crates/connector-core/src/: lib.rs
crates/connector-kdb/: Cargo.toml
crates/connector-kdb/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  mcp.rs  router.rs
crates/sync-core/: Cargo.toml
crates/sync-core/src/: lib.rs
crates/sync-notion/: Cargo.toml
crates/sync-notion/src/: lib.rs
crates/sync-zulip/: Cargo.toml
crates/sync-zulip/src/: lib.rs
docs/plans/: 2026-03-02-api-server-design.md  2026-03-02-api-server-implementation.md  2026-03-02-website-docs-design.md  2026-03-02-website-implementation.md  2026-03-02-website-v2-design.md  2026-03-02-website-v2-implementation.md  2026-03-10-teide-chat-backend-core.md  2026-03-10-teide-chat-frontend.md  2026-03-11-teidelum-production-readiness.md  2026-03-11-teidelum-v1-chat-platform.md  2026-03-18-pgq-adoption-design.md  2026-03-18-pgq-adoption-plan.md  graph-layer.md
docs/plans/completed/: 2026-03-11-teidelum-production-readiness.md
docs/specs/: 2026-03-10-teide-chat-design.md  2026-03-11-teidelum-design.md  2026-03-11-teidelum-v1-design.md
docs/superpowers/plans/: 2026-03-12-audit-fixes.md
plans/: api-layer.md
src/: api.rs  catalog.rs  demo.rs  graph.rs  lib.rs  main.rs  mcp.rs  router.rs  routes.rs  search.rs  server.rs
src/chat/: auth.rs  events.rs  files.rs  handlers.rs  hub.rs  id.rs  mod.rs  models.rs  slack.rs  ws.rs
src/connector/: kdb.rs  mod.rs
src/sync/: mod.rs  notion.rs  zulip.rs
tests/: chat_integration.rs  chat_plan2_integration.rs  http_api.rs  stress_test.rs
ui/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
ui/src/: app.css  app.html
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: main.rs
ui/src/lib/: api.ts  markdown.ts  notifications.ts  types.ts  ws.ts
ui/src/lib/components/: Autocomplete.svelte  Avatar.svelte  ChannelDirectory.svelte  ChannelInfoPanel.svelte  ConnectionStatus.svelte  EmojiPicker.svelte  FileUpload.svelte  ImageLightbox.svelte  LinkPreview.svelte  MessageContextMenu.svelte  MessageInput.svelte  MessageList.svelte  ReactionPicker.svelte  SearchModal.svelte  SettingsOverlay.svelte  ShortcutsModal.svelte  Sidebar.svelte  Skeleton.svelte  ThreadPanel.svelte  TypingIndicator.svelte  UserPresence.svelte  UserProfilePopover.svelte
ui/src/lib/stores/: auth.ts  channels.ts  messages.ts  settings.ts  theme.ts  unreads.ts  users.ts
ui/src/routes/: +layout.svelte
ui/src/routes/(app)/: +layout.svelte  +page.svelte
ui/src/routes/(app)/[channel]/: +page.svelte
ui/src/routes/(app)/settings/: +page.svelte
ui/src/routes/login/: +page.svelte
ui/src/routes/register/: +page.svelte
website/: CNAME  astro.config.mjs  index.html  package-lock.json  package.json  script.js  style.css
website/docs/: api-reference.html  architecture.html  docs.css  docs.js  examples.html  index.html  mcp-tools.html  quick-start.html  web-repl.html
website/src/assets/styles/: custom.css
website/src/components/: Architecture.astro  Features.astro  Hero.astro  QuickStart.astro
website/src/content/docs/: index.mdx
website/src/content/docs/architecture/: catalog-system.md  overview.md  query-router.md  search-engine.md
website/src/content/docs/examples/: agent-workflows.md  custom-connector.md  custom-sync-source.md  data-modeling.md
website/src/content/docs/getting-started/: configuration.md  installation.md  quickstart.md
website/src/content/docs/guides/: building-connectors.md  (+4 more)
website/src/pages/: index.astro
(+3 files in other folders)
