[package]
name = "teidelum"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Compact local-first MCP server that syncs work tools into a single searchable index"
repository = "https://github.com/TeideDB/teidelum"

[[bin]]
name = "teidelum"
path = "src/main.rs"

[lib]
name = "teidelum"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
rmcp = { version = "0.16", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
tantivy = "0.22"
teide = { path = "../teide-rs" }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
